# my_portfolio

./: manage.py  pip_requirements.txt  pyproject.toml
base_static/global/css/: styles.css
base_static/global/js/: scripts.js
base_templates/global/: base.html
base_templates/global/partials/: footer.html  head.html  header.html
portfolio/: urls.py  wsgi.py
portfolio/settings/: installed_apps.py
principal/: urls.py  views.py
principal/templates/principal/pages/: home.html  projects.html
principal/templates/principal/partials/: about_me.html  course_progress.html  home_intro.html  intro_home.html  panels.html  projects.html
utils/: environment.py
